2003-12-18  Zoltan Varga  <vargaz@freemail.hu>

	* support.cs (CharArrayHashtable): New helper class.

	* cs-tokenizer.cs: Store keywords in a hashtable indexed by 
	char arrays, not strings, so we can avoid creating a string in
	consume_identifier if the identifier is a keyword.

2003-12-16  Martin Baulig  <martin@ximian.com>

	* statement.cs (LocalInfo.Assigned): Removed this property.
	(LocalInfo.Flags): Removed `Assigned'.
	(LocalInfo.IsAssigned): New public method; takes the EmitContext
	and uses flow analysis.
	(Block.UsageWarning): Made this method private.
	(Block.Resolve): Call UsageWarning() if appropriate.

	* expression.cs (LocalVariableReference.DoResolve): Always set
	LocalInfo.Used here.

2003-12-13  Martin Baulig  <martin@ximian.com>

	* statement.cs (Statement.DoEmit, Statement.Emit): Don't return
	any value here; we're now using flow analysis to figure out
	whether a statement/block returns a value.

2003-12-13  Martin Baulig  <martin@ximian.com>

	* flowanalysis.cs (UsageVector.MergeFinallyOrigins): Made this
	working again.
	(FlowBranching.MergeFinally): Don't call
	`branching.CheckOutParameters()' here, this is called in
	MergeTopBlock().
	(FlowBranchingException.AddSibling): Call MergeFinallyOrigins()
	when adding the `finally' vector.	

2003-12-13  Martin Baulig  <martin@ximian.com>

	* flowanalysis.cs
	(UsageVector.MergeJumpOrigins, FlowBranching.Label): Make this
	actually work and also fix #48962.

2003-12-12 Ben Maurer  <bmaurer@users.sourceforge.net>

	* decl.cs: Do not check System.Object for nested types,
	since we know it does not have any. Big bang for buck:

	BEFORE:
	   Run 1:   8.35 seconds
	   Run 2:   8.32 seconds
	   corlib:  17.99 seconds
	AFTER:
	   Run 1:   8.17 seconds
	   Run 2:   8.17 seconds
	   corlib:  17.39 seconds

2003-12-11 Ben Maurer  <bmaurer@users.sourceforge.net>

	* class.cs (FindMembers): Allocate arraylists on demand. Most of the
	time we are returning 0 members, so we save alot here.
