@@ -1,3 +1,7 @@
+2003-12-19  Zoltan Varga  <vargaz@freemail.hu>
+
+	* driver.cs: Implement /target:module.
+
 2003-12-18  Zoltan Varga  <vargaz@freemail.hu>
 
 	* support.cs (CharArrayHashtable): New helper class.
